RESOLVED FIXED210318
Hit-testing a WebTiledBackingLayer with an animation asserts
https://bugs.webkit.org/show_bug.cgi?id=210318
Summary Hit-testing a WebTiledBackingLayer with an animation asserts
Simon Fraser (smfr)
Reported 2020-04-09 20:46:11 PDT
Hit-testing a WebTiledBackingLayer with an animation asserts
Attachments
Patch (5.45 KB, patch)
2020-04-09 20:47 PDT, Simon Fraser (smfr)
no flags
Patch (5.47 KB, patch)
2020-04-09 20:56 PDT, Simon Fraser (smfr)
no flags
Patch (5.47 KB, patch)
2020-04-09 21:02 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2020-04-09 20:47:58 PDT
Radar WebKit Bug Importer
Comment 2 2020-04-09 20:48:22 PDT
Simon Fraser (smfr)
Comment 3 2020-04-09 20:56:32 PDT
Simon Fraser (smfr)
Comment 4 2020-04-09 21:02:02 PDT
EWS
Comment 5 2020-04-10 08:27:55 PDT
Committed r259871: <https://trac.webkit.org/changeset/259871> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396042 [details].
Alexey Proskuryakov
Comment 6 2020-04-10 13:34:47 PDT
Comment on attachment 396042 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=396042&action=review > Source/WebCore/platform/graphics/ca/cocoa/WebTiledBackingLayer.mm:-58 > - ASSERT_NOT_REACHED(); FWIW, the assertion was added with this comment: "Implement this and assert that it's never reached. We should never create presentation layers since we don't animate this layer."
Simon Fraser (smfr)
Comment 7 2020-04-10 20:01:09 PDT
We plainly do animate this layer.
Note You need to log in before you can comment on or make changes to this bug.