Hit-testing a WebTiledBackingLayer with an animation asserts https://bugs.webkit.org/show_bug.cgi?id=210318

Reviewed by Tim Horton.
Source/WebCore:

collectDescendantLayersAtPoint() calls [layer presentationLayer] for layers
with running animations, and this calls -initWithLayer: on our layer subclasses.
Fix WebTiledBackingLayer to not assert in this case.

Test: fast/scrolling/mac/hit-test-overflow-tiled-layer.html

* platform/graphics/ca/cocoa/WebTiledBackingLayer.mm:
(-[WebTiledBackingLayer initWithLayer:]):

LayoutTests:

Test that scrolling-thread-hit-tests a tiled layer with an animation on it.

* fast/scrolling/mac/hit-test-overflow-tiled-layer-expected.txt: Added.
* fast/scrolling/mac/hit-test-overflow-tiled-layer.html: Added.


Canonical link: https://commits.webkit.org/223227@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259871 268f45cc-cd09-0410-ab3c-d52691b4dbfc